welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:4: error: not found: value ecritmessage
  ecritmessage(a)
  ^ColumnByColumn:5: error: not found: value Yfinal
  while (getY!=Yfinal || getY()!=yfinal){
               ^ColumnByColumn:6: error: not found: value c
    c=c+1
    ^ColumnByColumn:7: error: value update is not a member of Int
    if (getY()=yfinal){
        ^ColumnByColumn:8: error: not found: value setPas
      setPas(getX()+1,0)
      ^ColumnByColumn:10: error: not found: value setPOs
      setPOs(getX(),getY()+1)
      ^ColumnByColumn:12: error: not found: value c
    ecritMessage(c)
                 ^