welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
override def run() {
  var Xfinal=getMondeLargeur()-1
  var yfinal=getMondeHauteur()-1
  var a=0
  ecritmessage(a)
  while (getY!=Yfinal || getY()!=yfinal){
    c=c+1
    if (getY()=yfinal){
      setPas(getX()+1,0)
    }else{
      setPOs(getX(),getY()+1)
    }
    ecritMessage(c)


  }
}